@@ -14,9 +14,9 @@ set(CPACK_PACKAGE_VERSION_MAJOR 4)
 set(CPACK_PACKAGE_VERSION_MINOR 1)
 set(CPACK_PACKAGE_VERSION_PATCH 0)
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "Radiance ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
-SET(CPACK_RESOURCE_FILE_WELCOME "${radiance_SOURCE_DIR}/../Welcome.txt")
-SET(CPACK_RESOURCE_FILE_README "${radiance_SOURCE_DIR}/../README")
-SET(CPACK_RESOURCE_FILE_LICENSE "${radiance_SOURCE_DIR}/../License.txt") 
+SET(CPACK_RESOURCE_FILE_WELCOME "${radiance_SOURCE_DIR}/Welcome.txt")
+SET(CPACK_RESOURCE_FILE_README "${radiance_SOURCE_DIR}/README")
+SET(CPACK_RESOURCE_FILE_LICENSE "${radiance_SOURCE_DIR}/License.txt") 
 include(CPack)
 
 find_package(Qt4 COMPONENTS QtCore QtGui)
